--- a/ruby/Gemfile
+++ b/ruby/Gemfile
@@ -1,9 +1,11 @@
 source 'http://rubygems.org'
-gem 'tinder'
 gem 'sinatra'
 gem 'json'
 
 group :development, :test do
   gem 'rack-test'
   gem 'rspec'
+  gem 'ZenTest'
+  gem 'autotest-growl'
+  gem 'autotest-fsevent'
 end
